# rust-impact-analytics

./: README.md
.lsp/.cache/: db.transit.json
1-demo/src/: main.rs
10-loops/src/: main.rs
11-arrays/src/: main.rs
12-vectors/src/: main.rs
13-hashmap/src/: main.rs
14-slice-arr-vector/src/: main.rs
15-vec-vec/src/: main.rs
16-demo/src/: main.rs
17-pointers-box-dangling/src/: main.rs
18-udt/src/: main.rs
19-udt/src/: main.rs
2-demo/.lsp/.cache/: db.transit.json
2-demo/src/: main.rs
20-udt/src/: main.rs
21-traits/src/: main.rs
22-chain-of-methods/src/: main.rs
23-lifetimes/src/: main.rs
24-traits-asserted/src/: main.rs
25-add-trait/src/: main.rs
26-trait-asserted/src/: main.rs
27-genertic-args-trait/src/: main.rs
28-trait-bounds-generec/src/: main.rs
29-closures/src/: main.rs
3-demo/src/: main.rs
30-closure/src/: main.rs
31-shapes-packages/src/: main.rs  shape.rs
32-myshapes/: Cargo.toml
32-myshapes/src/: main.rs
33-threads/src/: main.rs
34-threads-count/src/: main.rs
35-channels/src/: main.rs
36-tokio-demo/: Cargo.toml
36-tokio-demo/src/: main.rs
37-tokio-spawn/: Cargo.toml
37-tokio-spawn/src/: main.rs
38-channels-in-tokio/src/: main.rs
39-error-handling/src/: main.rs
4-demo/src/: main.rs
40-actix-web/: Cargo.toml
40-actix-web/src/: main.rs
5-demo/src/: main.rs
6-demo-type-casting/src/: main.rs
7-if-else/src/: main.rs
8-enums/src/: main.rs
9-match-patten/src/: main.rs
myshapes/: Cargo.toml
myshapes/src/: shapes.rs
threads/threads-demo2/: Cargo.toml  input.txt
(+11 files in other folders)
