[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
 myshapes = { path = "../myshapes" }
 
 serde = { git = "https://github.com/serde-rs/serde", tag = "v1.0.130" }

 tokio = { version = "1", features = ["full"] }
 sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-native-tls"] }
 dotenv = "0.15"  # For loading environment variables (optional)